--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -128,6 +128,11 @@ footer{
 }
 .asidebar ul li{
     color: white;
+    list-style-type: square;
+}
+.asidebar ul li:hover {
+    color: red;
+    list-style-type: square;
 }
 
 .asidebar{
@@ -138,11 +143,11 @@ footer{
 .gamesTab{
     border-bottom: 2px solid white;
 }
-p{
-    font-family: sans-serif;
-    font-size: 1.2em;
-    color: white;
+.gamesTab ol li:hover{
+    color: red;
+
 }
+
 footer{
     background-color: rgb(28, 26, 26);
     opacity:90%;
